@@ -2,6 +2,8 @@
 	If you're reading this in github, 
 	please change to Tabs-4 as github is broken.
 	============================================= */
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:top;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
+
 body,html 				{background:none; color:#444; width:100%; height:100%; margin:0; padding:0; font-family:Arial, Helvetica, sans-serif; text-rendering:optimizelegibility; word-wrap:break-word;}
 
 
@@ -79,7 +81,6 @@ a.view_all_money:hover	{background-color:rgba(0,14,32,0.9); color:#fff;}
 	============================================= */
 .stats_wrap				{width:990px; margin:0 auto; padding:40px 0;}
 span.stats_title		{display:block; font-size:24px; color:#ccc; padding-bottom:10px;}
-span.stats_title.small	{display:block; font-size:18px; color:#B8C8CD; white-space:nowrap;}
 span.stats_num			{display:block; font-size:128px; color:#2E98FF;}
 span.stats_num.small	{display:block; font-size:64px;}
 .declare.stats			{width:960px; margin:0 auto; padding-top:10px; color:#ccc; font-size:16px;}
@@ -150,27 +151,23 @@ a.back_to_donor_list:hover		{background-color:#0081FF;}
 .act_alert_wrap			{color:#fff; font-size:16px; line-height:1.35em; padding:10px 20px; background-color:#000;}
 
 
-/*	Tables
-	============================================= */
-table					{border-spacing:0;}
-
 /*	Table for Header logo and Translations
 	============================================= */
-table.head				{width:100%; margin:0 auto;}
+table.head				{width:100%; margin:0 auto; border-collapse:initial;}
 table.head td:nth-child(2)			{color:#fff; text-align:right; vertical-align:top; font-size:14px;}
 
 /*	Table for Country Name and Flag
 	============================================= */
-table.country.min		{width:960px; margin:0 auto; padding:10px 0;}
-table.country.min td:nth-child(1)	{width:860px; max-width:860px; padding-right:20px; font-size:32px; line-height:1.1em; color:#fff;}
-table.country			{width:960px; margin:0 auto; padding:20px 0;}
+table.country			{width:960px; margin:0 auto; padding:20px 0; border-collapse:initial;}
 table.country td:nth-child(1)		{width:800px; max-width:800px; padding-right:10px; font-size:64px; line-height:1.1em; color:#fff;}
+table.country.min		{padding:10px 0;}
+table.country.min td:nth-child(1)	{width:860px; max-width:860px; padding-right:20px; font-size:32px; line-height:1.1em; color:#fff;}
 
 /*	Table for Money Modules
 	============================================= */
-table.money_mod			{width:380px; min-height:300px; background-color:#fff; padding:20px 40px; font-size:20px;}
-table.money_mod td:nth-child(1)	{width:190px; padding:5px 10px 5px 0;}
-table.money_mod td:nth-child(2)	{width:100px;}
+table.money_mod			{width:380px; min-height:300px; background-color:#fff; font-size:20px; border-collapse:initial; border-spacing:30px;}
+table.money_mod td:nth-child(1)	{width:190px; max-width:190px;}
+table.money_mod td:nth-child(2)	{width:100px; max-width:100px;}
 
 /*	Table Titles
 	============================================= */
@@ -187,7 +184,7 @@ table.title td.total_spend		{text-align:right;}
 /*	Table for Stats (key figures)
 	============================================= */
 table.stats				{width:990px; max-width:960px; border-collapse:separate; border-spacing:15px; border-left:0; border-right:0;}
-table.stats td			{background-color:rgba(0,14,32,0.7); padding:0px; border-radius:6px;}
+table.stats td			{background-color:rgba(0,14,32,0.7); padding:0px; border-radius:6px; vertical-align:middle;}
 table.stats td:hover	{background-color:rgba(0,14,32,0.9);}
 
 /*	Table for Active / Ended projects
