@@ -2,6 +2,8 @@
 	If you're reading this in github, 
 	please change to Tabs-4 as github is broken.
 	============================================= */
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
+
 body,html 				{background:none; color:#444; width:100%; height:100%; margin:0; padding:0; font-family:Arial, Helvetica, sans-serif; text-rendering:optimizelegibility; word-wrap:break-word;}
 
 
@@ -47,11 +49,11 @@ table.countries a:visited	{color:#fff; text-decoration:none;}
 table.countries a:hover		{color:#fff; text-decoration:none;}
 table.countries a:active	{color:#fff; text-decoration:none;}
 
-.dropdown_wrap			{position:relative; width:200px; padding:10px; margin:0 auto; background:#9bc7de; color:#fff; outline:none; cursor:pointer; font-weight:bold;}
-.dropdown_wrap:after	{content:""; width:0; height:0; position:absolute; right:16px; top:50%; margin-top:-6px; border-width:6px 0 6px 6px; border-style:solid; border-color:transparent #fff;}
-ul.dropdown				{}
-a.country_codes			{width:100%; height:100%; color:#fff; font-size:1em; line-height:1.25em; display:block; vertical-align:top; text-align:left;}
-a.country_codes:hover	{background-color:#2573CD;}
+.dropdown_wrap			{width:920px; padding:20px; margin:0 auto; cursor:pointer;}
+.dropdown_title			{display:inline-block; padding-right:20px; vertical-align:top; color:#fff; font-weight:bold;}
+ul.dropdown				{display:inline-block; vertical-align:top; list-style:none; padding:0; margin:0 auto;}
+a.country_code			{width:100%; height:100%; color:#fff; font-size:1em; line-height:1.25em; display:block; vertical-align:top; text-align:left;}
+a.country_code:hover	{background-color:#2573CD;}
 
 /*	Data Investigators alert
 	============================================= */
