@@ -14,11 +14,10 @@
 			<div class="default center">
 				<img src="/art/dp_logo.index.png" width="400" height="350" alt="D-Portal logo"/>
 				<div style="width:100%; margin:0 auto; text-align:center; color:#fff; font-size:1.8em; line-height:1.35em;">
-					Helping you to understand IATI data.
+					Helping you understand IATI data.
 				</div>
-				<div class="dropdown_wrap-1" tabindex="1">
-					<div>Choose a country</div>
-					<ul class="dropdown">
+				<div class="dropdown_wrap">
+				<div class="dropdown_title">Choose a country</div><ul class="dropdown">
 					<li><a class="country_code" href="AC">Ascension Island</a></li>
 					<li><a class="country_code" href="AD">Andorra</a></li>
 					<li><a class="country_code" href="AE">United Arab Emirates</a></li>
