@@ -563,10 +563,10 @@ BANGLADESH
 					<span class="stats_num">{active_projects}</span>
 				</a>
 			</td>
-			<td title="{stats_ending_tip_text}">
+			<td title="{stats_ended_tip_text}">
 				<a href="#" class="stats_link">
-					<span class="stats_title">{stats_ending_text} <span class="stats_title small">&lt; {stats_ending_period_text}</span></span>
-					<span class="stats_num small">{ending_soon}</span>
+					<span class="stats_title">{stats_ended_text}</span>
+					<span class="stats_num small">{ended_projects}</span>
 				</a>
 			</td>
 			<td title="{stats_total_tip_text}">
@@ -577,10 +577,10 @@ BANGLADESH
 			</td>
 		</tr>
 		<tr>
-			<td title="{stats_starting_tip_text}">
+			<td title="{stats_planned_tip_text}">
 				<a href="#" class="stats_link">
-					<span class="stats_title">{stats_starting_text} <span class="stats_title small">&lt; {stats_starting_period_text}</span></span>
-					<span class="stats_num small">{starting_soon}</span>
+					<span class="stats_title">{stats_planned_text}</span>
+					<span class="stats_num small">{planned_projects}</span>
 				</a>
 			</td>
 			<td title="{stats_publisher_tip_text}">
