@@ -97,41 +97,35 @@ View all Sectors
 #stats_active_text
 Active Projects
 
-#stats_ending_text
-Ending soon
-
-#stats_ending_period_text
-1 month
+#stats_ended_text
+Ended Projects
 
 #stats_total_text
-Total projects
+Total Projects
 
-#stats_starting_text
-Starting soon
-
-#stats_starting_period_text
-1 month
+#stats_planned_text
+Planned Projects
 
 #stats_publisher_text
-IATI publishers
+IATI Publishers
 
 #stats_active_tip_text
-Total number of active projects
+Total number of projects that are still active now
 
-#stats_ending_tip_text
-Total number of projects ending within one month
+#stats_ended_tip_text
+Total number of projects that have ended
 
 #stats_total_tip_text
 Total number of projects calculated for {country_name}
 
-#stats_starting_tip_text
-Total number of projects starting within one month
+#stats_planned_tip_text
+Total number of projects being planned in the future
 
 #stats_publisher_tip_text
-Total number of reporting organisations involved
+Total number of organisations that are reporting this data
 
 #declare_stats_text
-Data displayed above has been provided by IATI and is accurate as of {today}
+Data displayed above has been provided by IATI as of {today}
 
 #list_active_text
 Active projects ending soon
