@@ -94,38 +94,38 @@ Top 5 des Secteurs basés sur Non IATI (CRS et autres) 2012
 #link_sector_text
 Voir tous les Secteurs
 
-#stats_active_text
-Projets actifs
+#stats_active_text 
+Projets Actifs 
 
-#stats_ending_text
-Finissant bientôt
+#stats_ended_text 
+Projets Terminés 
 
-#stats_ending_period_text
-1 mois
+#stats_total_text 
+Nombre total de Projets 
 
-#stats_total_text
-Nombre de projets
+#stats_planned_text 
+Projets Prévus 
 
-#stats_starting_text
-À partir bientôt
+#stats_publisher_text 
+IATI éditeurs 
 
-#stats_starting_period_text
-1 mois
+#stats_active_tip_text 
+Nombre total de projets qui sont encore actifs aujourd'hui 
 
-#stats_publisher_text
-IATI éditeurs
+#stats_ended_tip_text 
+Nombre total de projets qui ont pris fin 
 
-#stats_active_tip_text
-Nombre total de projets en cours
+#stats_total_tip_text 
+Nombre total de projets calculées pour {country_name} 
 
-#stats_ending_tip_text
-Nombre total de projets qui se terminent bientôt dans ce mois par {today}
+#stats_planned_tip_text 
+Nombre total de projets en cours de planification dans l'avenir 
 
-#stats_total_tip_text
-Nombre total de projets calculées pour {country_name}
+#stats_publisher_tip_text 
+Nombre d'organisations qui rapporte ces données 
 
-#stats_starting_tip_text
-Nombre total de projets à partir bientôt dans ce mois par {today}
+# declare_stats_text 
+Données affichées ci-dessus ont été fournies par IATI au {today}
 
 #stats_publisher_tip_text
 Nombre total des organisations d'information impliqués
