@@ -94,38 +94,38 @@ Ver todos los donantes
 #link_sector_text
 Ver todos los sectores
 
-#stats_active_text
-Proyectos Activos
+#stats_active_text 
+Proyectos Activos 
 
-#stats_ending_text
-Finalizando pronto
+#stats_ended_text 
+Proyectos Finalizados 
 
-#stats_ending_period_text
-1 mes
+#stats_total_text 
+Total de Proyectos 
 
-#stats_total_text
-Total de proyectos
+#stats_planned_text 
+Proyectos Planificados 
 
-#stats_starting_text
-Comenzando en breve
+#stats_publisher_text 
+IATI Publishers 
 
-#stats_starting_period_text
-1 mes
+#stats_active_tip_text 
+Número total de proyectos que aún están activos ahora 
 
-#stats_publisher_text
-IATI Publishers
+#stats_ended_tip_text 
+Número total de proyectos que han terminado 
 
-#stats_active_tip_text
-Número total de proyectos activos
+#stats_total_tip_text 
+Número total de proyectos calculados para {country_name} 
 
-#stats_ending_tip_text
-Número total de proyectos que terminan pronto dentro de este mes por {today}
+#stats_planned_tip_text 
+Número total de proyectos que están siendo planificadas en el futuro 
 
-#stats_total_tip_text
-Número total de proyectos calculados para {country_name}
+#stats_publisher_tip_text 
+Número total de organizaciones que están reportando estos datos 
 
-#stats_starting_tip_text
-Número total de proyectos que comiencen en breve dentro de este mes por {today}
+#declare_stats_text 
+Los datos que se muestran más arriba ha sido proporcionada por IATI como de {today}
 
 #stats_publisher_tip_text
 Número total de Organizaciones informadora
