@@ -1,3 +1,10 @@
+Development Portal (2014-03-24 shi)
+==============================
+Refactor table code
+Do away with <1 month queries (increase site load)
+Added spinner for when things are loading
+
+
 Development Portal (2014-03-23 shi) ^o^
 ==============================
 Translations for crumbs
